--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,19 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*/*"
+        "<all_urls>"
       ],
       "js": [
         "readable.js"
       ]
     }
   ],
+  "background": {
+    "scripts": ["readable_background.js"]
+  },
   "permissions": [
-    "*://*/*",
-    "webRequest"
+    "<all_urls>",
+    "webRequest",
+    "tabs"
   ]
 }
