--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
   "name": "Readable",
-  "version": "1.1",
+  "version": "1.3",
   "description": "Converts custom font characters to standard alphabetic characters.",
   "icons": {
-    "48": "icons/icon-48.png",
-    "96": "icons/icon-96.png",
-    "128": "icons/icon-128.png"
+    "48": "icons/48.png",
+    "96": "icons/96.png",
+    "128": "icons/128.png"
   },
   "content_scripts": [
     {
